
<major>.<minor>.<patch>

And constructed with the following guidelines:

* Breaking backward compatibility bumps the major (and resets the minor and patch)
* New additions without breaking backward compatibility bumps the minor (and resets the patch)
* Bug fixes and misc changes bumps the patch

For more information on SemVer, please visit http://semver.org/.


v0.4-6
------
* Tooltip provides HTML formatting, with link (issue [#37](https://github.com/cboettig/knitcitations/issues/37))
* html print method now handled directly in knitcitations just like the markdown print method, with ordering, etc, since default html printing method sucks

v0.4-5
------

* Provide page range as option to `citep` and `citet` (see issue [#32](https://github.com/cboettig/knitcitations/issues/32))
* Fixes a bug in which page numbers were not grabbed from the DOI look-up  ([#33](https://github.com/cboettig/knitcitations/issues/33))  
* Date added to Description file so that users can cite the development version properly ([#34](https://github.com/cboettig/knitcitations/issues/34))

v0.4-4
------

* Depends R (>= 2.15.0)
* Released to CRAN (2013-03-18)
* Minor changes: replace paste0 with paste, sep=""


v0.4-3
------

* Some bugfixes to bib_format method
* tooltip javascript uses class 'showtooltip' rather than rel='tooltip' to avoid conflicting semantic meaning and styling and to avoid clashes with existing 'tooltip' class in twitter bootstrap
* cito links fix href and use rel instead of property


v0.4-2
------

* Testing out `bib_format` method to change order of citation elements in reference list

v0.4-1
------

* Fixes Issue [#27](https://github.com/cboettig/knitcitations/issues/27) in rdfa printing
* Nicer markdown printing
* keep each function in separate file

v0.4-0
------

### Major changes

* Support for citations by URL.  Paste the full URL of any academic
  journal or other webpage.  Uses the Greycite API 